miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_r6_active_bindings.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_r6_r_wrapper(&parsed)
---
#' @title Temperature R6 Class
#' @name Temperature
#' @rdname Temperature
#' @importFrom R6 R6Class
#' @param .ptr Internal pointer (used by static methods, not for direct use).
#' @field celsius Temperature in Celsius.
#' @field fahrenheit Temperature in Fahrenheit (read-only).
#' @export
Temperature <- R6::R6Class("Temperature",
  public = list(
    # Temperature::new (1:1)
    #' @description Create a new temperature.
    #' @param celsius Temperature in Celsius.
    initialize = function(celsius, .ptr = NULL) {
      if (is.null(.ptr)) {
        if (!isTRUE(is.double(celsius))) .miniextendr_arg_error("celsius", "must be double")
        if (!isTRUE(length(celsius) == 1L)) .miniextendr_arg_error("celsius", "must have length 1")
      }
      if (!is.null(.ptr)) {
        private$.ptr <- .ptr
      } else {
        .val <- .Call(C_miniextendr_macros_Temperature__new, .call = sys.call(), celsius)
        if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
        private$.ptr <- .val
      }
    }
  ),
  private = list(
    .ptr = NULL
  ),
  lock_objects = TRUE,
  lock_class = FALSE,
  cloneable = FALSE
)

# Temperature::set_celsius (1:1)
#' @description Set the temperature in Celsius.
#' @param value (no documentation available)
Temperature$set("public", "set_celsius", function(value) {
  if (!isTRUE(is.double(value))) .miniextendr_arg_error("value", "must be double")
  if (!isTRUE(length(value) == 1L)) .miniextendr_arg_error("value", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Temperature__set_celsius, .call = sys.call(), private$.ptr, value)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self
})

Temperature$set("active", "celsius", function(value) {
  if (missing(value)) {
    .val <- .Call(C_miniextendr_macros_Temperature__celsius, .call = sys.call(), private$.ptr)
    if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
    .val
  } else {
    if (!isTRUE(is.double(value))) .miniextendr_arg_error("value", "must be double")
    if (!isTRUE(length(value) == 1L)) .miniextendr_arg_error("value", "must have length 1")
    .val <- .Call(C_miniextendr_macros_Temperature__set_celsius, .call = sys.call(), private$.ptr, value)
    if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
    invisible(self)
  }
})

Temperature$set("active", "fahrenheit", function() {
  .val <- .Call(C_miniextendr_macros_Temperature__fahrenheit, .call = sys.call(), private$.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
})
