miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_r6_basic.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_r6_r_wrapper(&parsed)
---
#' @title Counter R6 Class
#' @name Counter
#' @rdname Counter
#' @importFrom R6 R6Class
#' @param .ptr Internal pointer (used by static methods, not for direct use).
#' @export
Counter <- R6::R6Class("Counter",
  public = list(
    # Counter::new (1:1)
    #' @description Create a new counter
    #' @param value Initial value
    initialize = function(value, .ptr = NULL) {
      if (is.null(.ptr)) {
        if (!isTRUE(is.integer(value))) .miniextendr_arg_error("value", "must be integer")
        if (!isTRUE(length(value) == 1L)) .miniextendr_arg_error("value", "must have length 1")
      }
      if (!is.null(.ptr)) {
        private$.ptr <- .ptr
      } else {
        .val <- .Call(C_miniextendr_macros_Counter__new, .call = sys.call(), value)
        if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
        private$.ptr <- .val
      }
    }
  ),
  private = list(
    .ptr = NULL
  ),
  lock_objects = TRUE,
  lock_class = FALSE,
  cloneable = FALSE
)

# Counter::get (1:1)
#' @description Get the current value
Counter$set("public", "get", function() {
  .val <- .Call(C_miniextendr_macros_Counter__get, .call = sys.call(), private$.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
})

# Counter::increment (1:1)
#' @description Increment by one
Counter$set("public", "increment", function() {
  .val <- .Call(C_miniextendr_macros_Counter__increment, .call = sys.call(), private$.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self
})

# Counter::from_value (1:1)
#' @description Create from value (static factory)
#' @name Counter$from_value
#' @rdname Counter
Counter$from_value <- function(v) {
  if (!isTRUE(is.integer(v))) .miniextendr_arg_error("v", "must be integer")
  if (!isTRUE(length(v) == 1L)) .miniextendr_arg_error("v", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Counter__from_value, .call = sys.call(), v)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  Counter$new(.ptr = .val)
}
