miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_r6_private_methods.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_r6_r_wrapper(&parsed)
---
#' @title Secure R6 Class
#' @name Secure
#' @rdname Secure
#' @importFrom R6 R6Class
#' @param .ptr Internal pointer (used by static methods, not for direct use).
#' @export
Secure <- R6::R6Class("Secure",
  public = list(
    # Secure::new (1:1)
    #' @description Create a new `Secure`.
    initialize = function(.ptr = NULL) {
      if (!is.null(.ptr)) {
        private$.ptr <- .ptr
      } else {
        .val <- .Call(C_miniextendr_macros_Secure__new, .call = sys.call())
        if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
        private$.ptr <- .val
      }
    }
  ),
  private = list(
    # Secure::internal_compute (1:1)
    internal_compute = function() {
      .val <- .Call(C_miniextendr_macros_Secure__internal_compute, .call = sys.call(), private$.ptr)
      if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
      .val
    },
    .ptr = NULL
  ),
  lock_objects = TRUE,
  lock_class = FALSE,
  cloneable = FALSE
)

# Secure::public_api (1:1)
#' @description Method `public_api`.
Secure$set("public", "public_api", function() {
  .val <- .Call(C_miniextendr_macros_Secure__public_api, .call = sys.call(), private$.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
})
