miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_r6_with_options.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_r6_r_wrapper(&parsed)
---
#' @title Child R6 Class
#' @name Child
#' @rdname Child
#' @importFrom R6 R6Class
#' @param .ptr Internal pointer (used by static methods, not for direct use).
#' @export
Child <- R6::R6Class("Child", inherit = .__MX_CLASS_REF_ParentClass__,
  public = list(
    # Child::new (1:1)
    #' @description Create a new `Child`.
    initialize = function(.ptr = NULL) {
      if (!is.null(.ptr)) {
        private$.ptr <- .ptr
      } else {
        .val <- .Call(C_miniextendr_macros_Child__new, .call = sys.call())
        if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
        private$.ptr <- .val
      }
    }
  ),
  private = list(
    .ptr = NULL
  ),
  lock_objects = TRUE,
  lock_class = FALSE,
  cloneable = TRUE
)

# Child::greet (1:1)
#' @description Method `greet`.
Child$set("public", "greet", function() {
  .val <- .Call(C_miniextendr_macros_Child__greet, .call = sys.call(), private$.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
})

Child$lock()
