miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_s3_basic.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
assertion_line: 4419
expression: generate_s3_r_wrapper(&parsed)
---
# Counter::new (1:1)
#' @title Counter S3 Class
#' @name Counter
#' @rdname Counter
#' @param value (undocumented)
#' @export
new_counter <- function(value) {
  if (!isTRUE(is.integer(value))) .miniextendr_arg_error("value", "must be integer")
  if (!isTRUE(length(value) == 1L)) .miniextendr_arg_error("value", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Counter__new, .call = sys.call(), value)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  structure(.val, class = "Counter")
}

# Counter::get (1:1)
#' @title S3 generic for `get`
#' @description S3 generic for `get`
#' @name get.Counter
#' @rdname Counter
#' @param x An object
#' @param ... Additional arguments passed to methods
#' @export get
if (!base::exists("get", mode = "function")) {
  get <- function(x, ...) UseMethod("get")
} else if (local({ .mx_gen <- base::get("get", mode = "function"); !(is.primitive(.mx_gen) || isTRUE(utils::isS3stdGeneric(.mx_gen)) || methods::isGeneric("get") || inherits(.mx_gen, "S7_generic")) })) {
  # `get` is a plain closure that UseMethod dispatch will never consult.
  # Shadow it with a package-local generic. The default method delegating to
  # the masked closure is registered via registerS3method() so it lives ONLY
  # in the namespace's S3 methods table: a literal `get.default` binding
  # would trip roxygen2's dynamic S3 scan (warn_missing_s3_exports), and a
  # static NAMESPACE S3method(get, default) would break package load
  # whenever this branch does not fire.
  .mx_shadow_default <- local({
    .mx_masked <- base::get("get", mode = "function")
    function(x, ...) .mx_masked(x, ...)
  })
  get <- function(x, ...) UseMethod("get")
  base::registerS3method("get", "default", .mx_shadow_default, envir = base::environment())
  base::rm(.mx_shadow_default)
}
# else: existing usable generic (primitive/S3/S4/S7) — reuse as-is.

#' @name get.Counter
#' @rdname Counter
#' @method get Counter
#' @param x An object.
#' @param ... Additional arguments.
#' @export
get.Counter <- function(x, ...) {
  .val <- .Call(C_miniextendr_macros_Counter__get, .call = sys.call(), x)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
}

# Counter::increment (1:1)
#' @title S3 generic for `increment`
#' @description S3 generic for `increment`
#' @name increment.Counter
#' @rdname Counter
#' @param x An object
#' @param ... Additional arguments passed to methods
#' @export increment
if (!base::exists("increment", mode = "function")) {
  increment <- function(x, ...) UseMethod("increment")
} else if (local({ .mx_gen <- base::get("increment", mode = "function"); !(is.primitive(.mx_gen) || isTRUE(utils::isS3stdGeneric(.mx_gen)) || methods::isGeneric("increment") || inherits(.mx_gen, "S7_generic")) })) {
  # `increment` is a plain closure that UseMethod dispatch will never consult.
  # Shadow it with a package-local generic. The default method delegating to
  # the masked closure is registered via registerS3method() so it lives ONLY
  # in the namespace's S3 methods table: a literal `increment.default` binding
  # would trip roxygen2's dynamic S3 scan (warn_missing_s3_exports), and a
  # static NAMESPACE S3method(increment, default) would break package load
  # whenever this branch does not fire.
  .mx_shadow_default <- local({
    .mx_masked <- base::get("increment", mode = "function")
    function(x, ...) .mx_masked(x, ...)
  })
  increment <- function(x, ...) UseMethod("increment")
  base::registerS3method("increment", "default", .mx_shadow_default, envir = base::environment())
  base::rm(.mx_shadow_default)
}
# else: existing usable generic (primitive/S3/S4/S7) — reuse as-is.

#' @name increment.Counter
#' @rdname Counter
#' @method increment Counter
#' @param x An object.
#' @param ... Additional arguments.
#' @export
increment.Counter <- function(x, ...) {
  .val <- .Call(C_miniextendr_macros_Counter__increment, .call = sys.call(), x)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  x
}

# Counter::zero (1:1)
#' @name counter_zero
#' @rdname Counter
#' @export
counter_zero <- function() {
  .val <- .Call(C_miniextendr_macros_Counter__zero, .call = sys.call())
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  structure(.val, class = "Counter")
}

#' @rdname Counter
#' @export
Counter <- new.env(parent = emptyenv())

Counter$new <- new_counter
