miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_s4_basic.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_s4_r_wrapper(&parsed)
---
#' @title Counter S4 Class
#' @name Counter
#' @rdname Counter
#' @importFrom methods setClass setGeneric setMethod new
#' @slot ptr External pointer to Rust `Counter` struct
methods::setClass("Counter", slots = c(ptr = "externalptr"))

# Counter::new (1:1)
#' @param value (undocumented)
#' @name Counter
#' @rdname Counter
#' @export
Counter <- function(value) {
  if (!isTRUE(is.integer(value))) .miniextendr_arg_error("value", "must be integer")
  if (!isTRUE(length(value) == 1L)) .miniextendr_arg_error("value", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Counter__new, .call = sys.call(), value)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  methods::new("Counter", ptr = .val)
}

.__MX_GENERIC_DOC__(kind="S4", generic="s4_get", class="Counter", export=true)
# Counter::get (1:1)
#' @name Counter-s4_get
#' @rdname Counter
#' @aliases s4_get,Counter-method
if (!exists("s4_get", where = topenv(environment()), inherits = FALSE)) methods::setGeneric("s4_get", function(x, ...) standardGeneric("s4_get"))
#' @exportMethod s4_get
methods::setMethod("s4_get", "Counter", function(x, ...) {
  .val <- .Call(C_miniextendr_macros_Counter__get, .call = sys.call(), x@ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
})

.__MX_GENERIC_DOC__(kind="S4", generic="s4_increment", class="Counter", export=true)
# Counter::increment (1:1)
#' @name Counter-s4_increment
#' @rdname Counter
#' @aliases s4_increment,Counter-method
if (!exists("s4_increment", where = topenv(environment()), inherits = FALSE)) methods::setGeneric("s4_increment", function(x, ...) standardGeneric("s4_increment"))
#' @exportMethod s4_increment
methods::setMethod("s4_increment", "Counter", function(x, ...) {
  .val <- .Call(C_miniextendr_macros_Counter__increment, .call = sys.call(), x@ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  x
})
