miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_s7_basic.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_s7_r_wrapper(&parsed)
---
#' @title Counter S7 Class
#' @name Counter
#' @rdname Counter
#' @importFrom S7 new_class class_any new_object S7_object new_generic method
#' @export
#' @param value (undocumented)
#' @param .ptr Internal pointer (used by static methods, not for direct use).
Counter <- S7::new_class("Counter",
  properties = list(
    .ptr = S7::class_any
  ),
  constructor = function(value, .ptr = NULL) {
    if (is.null(.ptr)) {
      if (!isTRUE(is.integer(value))) .miniextendr_arg_error("value", "must be integer")
      if (!isTRUE(length(value) == 1L)) .miniextendr_arg_error("value", "must have length 1")
    }
    if (!is.null(.ptr)) {
      S7::new_object(S7::S7_object(), .ptr = .ptr)
    } else {
      .val <- .Call(C_miniextendr_macros_Counter__new, .call = sys.call(), value)
      if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
      S7::new_object(S7::S7_object(), .ptr = .val)
    }
  }
)

.__MX_GENERIC_DOC__(kind="S7", generic="get", class="Counter", export=true, dispatch="x", no_dots=false)
# Counter::get (1:1)
#' @name Counter-get
#' @rdname Counter
#' @aliases Counter$get
#' @rawNamespace export(get)
if (!base::exists("get", mode = "function")) {
  # No existing binding; define a plain package-local S7 generic.
  get <- S7::new_generic("get", "x", function(x, ...) S7::S7_dispatch())
} else if (local({ .mx_gen <- base::get("get", mode = "function"); !(inherits(.mx_gen, "S7_generic") || is.primitive(.mx_gen) || isTRUE(utils::isS3stdGeneric(.mx_gen)) || methods::isGeneric("get")) })) {
  # `get` resolves to a plain (non-generic) function S7 cannot
  # attach a method to. Define a package-local S7 generic that shadows it,
  # with a class_any fallback delegating to the masked function so ordinary
  # (non-S7) calls (e.g. var(1:10)) keep working. S4 generics also take this
  # path; the fallback preserves their dispatch.
  get <- local({
    .mx_masked <- base::get("get", mode = "function")
    .mx_g <- S7::new_generic("get", "x", function(x, ...) S7::S7_dispatch())
    S7::method(.mx_g, S7::class_any) <- function(x, ...) .mx_masked(x, ...)
    .mx_g
  })
}
# else: existing usable generic (S7/primitive/S3/S4) — reuse as-is.
S7::method(get, Counter) <- function(x, ...) {
  .val <- .Call(C_miniextendr_macros_Counter__get, .call = sys.call(), x@.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
}

#' Fast-path shortcut for the `get` S7 method on `Counter`.
#'
#' Calls the underlying Rust routine directly, bypassing `S7::S7_dispatch()`
#' (the class walk + method-table lookup). Use in hot loops where the
#' per-call dispatch overhead matters. **Footgun:** this shortcut does not
#' perform subclass dispatch: a method override defined on a child class
#' will *not* be honoured. Use the generic when subclassing is possible.
#' @param self A `Counter` object.
#' @param ... Additional arguments; ignored by the fast-path shortcut.
#' @name Counter_get
#' @rdname Counter
#' @export Counter_get
Counter_get <- function(self, ...) {
  .val <- .Call(C_miniextendr_macros_Counter__get, .call = sys.call(), self@.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
}

.__MX_GENERIC_DOC__(kind="S7", generic="increment", class="Counter", export=true, dispatch="x", no_dots=false)
# Counter::increment (1:1)
#' @name Counter-increment
#' @rdname Counter
#' @aliases Counter$increment
#' @rawNamespace export(increment)
if (!base::exists("increment", mode = "function")) {
  # No existing binding; define a plain package-local S7 generic.
  increment <- S7::new_generic("increment", "x", function(x, ...) S7::S7_dispatch())
} else if (local({ .mx_gen <- base::get("increment", mode = "function"); !(inherits(.mx_gen, "S7_generic") || is.primitive(.mx_gen) || isTRUE(utils::isS3stdGeneric(.mx_gen)) || methods::isGeneric("increment")) })) {
  # `increment` resolves to a plain (non-generic) function S7 cannot
  # attach a method to. Define a package-local S7 generic that shadows it,
  # with a class_any fallback delegating to the masked function so ordinary
  # (non-S7) calls (e.g. var(1:10)) keep working. S4 generics also take this
  # path; the fallback preserves their dispatch.
  increment <- local({
    .mx_masked <- base::get("increment", mode = "function")
    .mx_g <- S7::new_generic("increment", "x", function(x, ...) S7::S7_dispatch())
    S7::method(.mx_g, S7::class_any) <- function(x, ...) .mx_masked(x, ...)
    .mx_g
  })
}
# else: existing usable generic (S7/primitive/S3/S4) — reuse as-is.
S7::method(increment, Counter) <- function(x, ...) {
  .val <- .Call(C_miniextendr_macros_Counter__increment, .call = sys.call(), x@.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  x
}

#' Fast-path shortcut for the `increment` S7 method on `Counter`.
#'
#' Calls the underlying Rust routine directly, bypassing `S7::S7_dispatch()`
#' (the class walk + method-table lookup). Use in hot loops where the
#' per-call dispatch overhead matters. **Footgun:** this shortcut does not
#' perform subclass dispatch: a method override defined on a child class
#' will *not* be honoured. Use the generic when subclassing is possible.
#' @param self A `Counter` object.
#' @param ... Additional arguments; ignored by the fast-path shortcut.
#' @name Counter_increment
#' @rdname Counter
#' @export Counter_increment
Counter_increment <- function(self, ...) {
  .val <- .Call(C_miniextendr_macros_Counter__increment, .call = sys.call(), self@.ptr)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self
}

# Counter::from_parts (1:1)
#' @param a (undocumented)
#' @param b (undocumented)
#' @name Counter_from_parts
#' @rdname Counter
#' @export
Counter_from_parts <- function(a, b) {
  if (!isTRUE(is.integer(a))) .miniextendr_arg_error("a", "must be integer")
  if (!isTRUE(length(a) == 1L)) .miniextendr_arg_error("a", "must have length 1")
  if (!isTRUE(is.integer(b))) .miniextendr_arg_error("b", "must be integer")
  if (!isTRUE(length(b) == 1L)) .miniextendr_arg_error("b", "must have length 1")
  {
    .val <- .Call(C_miniextendr_macros_Counter__from_parts, .call = sys.call(), a, b)
    if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
    Counter(.ptr = .val)
  }
}
