miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_s7_documented_props.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_s7_r_wrapper(&parsed)
---
#' @title Documented S7 Class
#' @name Documented
#' @rdname Documented
#' @importFrom S7 new_class class_any new_object S7_object new_generic method new_property class_integer
#' @export
#' @param .ptr Internal pointer (used by static methods, not for direct use).
#' @prop count The integer count value.
Documented <- S7::new_class("Documented",
  properties = list(
    .ptr = S7::class_any,
    count = S7::new_property(class = S7::class_integer, getter = function(self) .Call(C_miniextendr_macros_Documented__count, .call = NULL, self@.ptr), setter = function(self, value) { .Call(C_miniextendr_macros_Documented__count, .call = NULL, self@.ptr); self })
  ),
  constructor = function(.ptr = NULL) {
    if (!is.null(.ptr)) {
      S7::new_object(S7::S7_object(), .ptr = .ptr)
    } else {
      .val <- .Call(C_miniextendr_macros_Documented__new, .call = sys.call())
      if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
      S7::new_object(S7::S7_object(), .ptr = .val)
    }
  }
)
