miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_s7_prop_tags_with_defaults_and_varargs.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_s7_r_wrapper(&parsed)
---
#' @title WithDefaults S7 Class
#' @name WithDefaults
#' @rdname WithDefaults
#' @importFrom S7 new_class class_any new_object S7_object new_generic method new_property class_character
#' @export
#' @param name Character name.
#' @param scale (undocumented)
#' @param mode (undocumented)
#' @param .ptr Internal pointer (used by static methods, not for direct use).
WithDefaults <- S7::new_class("WithDefaults",
  properties = list(
    .ptr = S7::class_any,
    name = S7::new_property(class = S7::class_character, getter = function(self) .Call(C_miniextendr_macros_WithDefaults__name, .call = NULL, self@.ptr))
  ),
  constructor = function(name, scale, mode, .ptr = NULL) {
    if (is.null(.ptr)) {
      if (!isTRUE(is.character(name))) .miniextendr_arg_error("name", "must be character")
      if (!isTRUE(length(name) == 1L)) .miniextendr_arg_error("name", "must have length 1")
      if (!isTRUE(is.double(scale))) .miniextendr_arg_error("scale", "must be double")
      if (!isTRUE(length(scale) == 1L)) .miniextendr_arg_error("scale", "must have length 1")
      if (!isTRUE(is.null(mode) || is.integer(mode))) .miniextendr_arg_error("mode", "must be NULL or integer")
      if (!isTRUE(is.null(mode) || length(mode) == 1L)) .miniextendr_arg_error("mode", "must be NULL or have length 1")
    }
    if (!is.null(.ptr)) {
      S7::new_object(S7::S7_object(), .ptr = .ptr)
    } else {
      .val <- .Call(C_miniextendr_macros_WithDefaults__new, .call = sys.call(), name, scale, mode)
      if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
      S7::new_object(S7::S7_object(), .ptr = .val)
    }
  }
)
